--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="X-UA-Compatible" content="ie-edge">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <style media="screen">
+            img {
+                width: 100%;
+            }
+        </style>
         <title>JM Scholar File Uploads</title>
     </head>
     <body>
@@ -19,6 +24,23 @@
                             <input type="submit" value="Submit" class="btn btn-primary btn-block">
                         </div>
                     </form>
+                    <hr>
+                    <% if(files) {%>
+                        <% files.forEach(function(file) { %>
+                            <div class="card card-body mb-3">
+                                <% if(file.isImage) { %>
+                                    <img src="image/<%= file.filename %>" alt="">
+                                <% } else { %>
+                                    <%= file.filename %>
+                                <% } %>
+                                <form method="POST" action="/files/<%= file._id %>?_method=DELETE">
+                                    <button type="button" name="button" class="btn btn-danger btn-block mt-4">Delete</button>
+                                </form>
+                            </div>
+                        <% }) %>
+                    <% } else { %>
+                        <p>No files to show.</p>
+                    <% } %>
                 </div>
             </div>
         </div>
