Delete request is received by Express server. Actual deletion impeded by deprecated GridFS modules. Going to try GridFSBucket to avoid warnings.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
                                     <%= file.filename %>
                                 <% } %>
                                 <form method="POST" action="/files/<%= file._id %>?_method=DELETE">
-                                    <button type="button" name="button" class="btn btn-danger btn-block mt-4">Delete</button>
+                                    <button class="btn btn-danger btn-block mt-4">Delete</button>
                                 </form>
                             </div>
                         <% }) %>
